# mem_profile

./: .clang-format  .gitignore  CMakeLists.txt  Debugging.md  README.md  justfile
cmake/: Utils.cmake  mem_profileConfig.cmake.in
etc/: gen_test_files.sh
etc/test_cpp_files/: split_def.cpp
etc/test_files/linux/: demo_nlohmann_json.json  demo_objects.json  demo_objects_beman_inplace.json  demo_objects_in_array.json  demo_objects_in_lambda.json  demo_objects_in_svector.json  demo_objects_in_svector_martinus.json  demo_objects_in_tuplet.json  demo_objects_in_union.json  demo_objects_in_variant.json  demo_objects_in_vector.json  demo_simple_alloc.json  demo_simple_nested_objects.json  objects_beman_inplace.json  test_global.json  test_single_alloc.json  test_std_string.json  test_string.json
etc/test_files/macos/: demo_nlohmann_json.json  demo_objects.json  demo_objects_beman_inplace.json  demo_objects_in_array.json  demo_objects_in_lambda.json  demo_objects_in_svector.json  demo_objects_in_svector_martinus.json  demo_objects_in_tuplet.json  demo_objects_in_union.json  demo_objects_in_variant.json  demo_objects_in_vector.json  demo_simple_alloc.json  demo_simple_nested_objects.json  test_global.json  test_single_alloc.json  test_std_string.json  test_string.json
examples/: CMakeLists.txt
examples/etc/inputs/: objects.json
examples/include/beman/inplace_vector/: inplace_vector.h
examples/src/: nlohmann_json.cpp  objects.cpp  objects_beman_inplace.cpp  objects_in_array.cpp  objects_in_lambda.cpp  objects_in_svector.cpp  objects_in_svector_martinus.cpp  objects_in_tuplet.cpp  objects_in_union.cpp  objects_in_variant.cpp  objects_in_vector.cpp  simple_alloc.cpp  simple_nested_objects.cpp  single_alloc.cpp  string.cpp  very_simple_alloc.cpp
examples/test_files/: global.cpp  single_alloc.cpp  std_string.cpp  string.cpp  threads.cpp
mp/ast/include/mp_ast/: ast_consumer.h  ast_env.cpp  ast_env.h  ast_fmt.h  ast_tools.cpp  ast_tools.h  dtor_visitor.h
mp/core/include/mp_core/: colors.h  export.h  fmt_enum.cpp
mp/error/include/mp_error/: error.cpp  error.h
mp/fs/include/mp_fs/: fs.h
mp/hook_prelude/include/: mp_hook_prelude.h
mp/mem_profile/include/cli/: arg_cursor.h  cli.h  cstr.h  levenshtein_distance.h
mp/mem_profile/src/: main.cpp
mp/runtime/include/mem_profile/: abi.h  alloc.h  allocator.h  containers.h  counters.h  dlsym.h  env.h  io.h  json.h  mem_profile.cpp  output_record.cpp  output_record.h  output_record_io.h  prelude.h  ranges.h  sym_info.h  trace.h
mp/types/include/mp_types/: types.h
mp/unwind/include/mp_unwind/: mp_unwind.cpp  mp_unwind.h
mp_ast/include/mp_ast/: ast_fmt.cpp  ast_printer.h  ast_tools.h  mp_plugin_action.h
mp_core/include/mp_core/: colors.h  fmt.h  fmt_enum.h  types.h
mp_error/include/mp_error/: error.cpp
mp_fs/include/mp_fs/: fs.cpp
mp_hook_prelude/include/: mp_hook_prelude.h
mp_unwind/include/mp_unwind/: mp_unwind.cpp  mp_unwind.h
src/plugin/: plugin.cpp
test_files/: minimal.cpp  test.cpp
test_plugin/: CMakeLists.txt
test_plugin/src/: main.cpp
tools/: ast_printer.cpp
